@@ -42,6 +42,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|fail
 import|;
 end_import
@@ -2364,6 +2376,47 @@ argument_list|,
 name|RMAppAttemptState
 operator|.
 name|LAUNCHED
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testComparePriorities ()
+specifier|public
+name|void
+name|testComparePriorities
+parameter_list|()
+block|{
+name|Priority
+name|high
+init|=
+name|Priority
+operator|.
+name|newInstance
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|Priority
+name|low
+init|=
+name|Priority
+operator|.
+name|newInstance
+argument_list|(
+literal|2
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|high
+operator|.
+name|compareTo
+argument_list|(
+name|low
+argument_list|)
+operator|>
+literal|0
 argument_list|)
 expr_stmt|;
 block|}
